creacion de modulos

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
-HOST= "localhost"
-DB_USER= "root"
-DB_DATABASE= "interpolis"
+HOST= localhost
+DB_USER= root
+DB_DATABASE= interpolis
 # DB_PASSWORD= "password"  // En caso de necesitar contraseña, descomentar esta línea y agregar la contraseña
-DB_PORT= "3306"
-APP_PORT= "4100"
+DB_PORT= 4100
+APP_PORT= 4100
+SALT =3.Wa78xy*
