--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
     "validator": "^13.15.15"
